# varos

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PANELS_PRO_SPEC.md  README.md  RUST_PORT_SPIKE_NOTES.md  SHAPES_NOTES.md  TRADEMARK.md  UI_FIGMA_SPEC.md  VAROS_START_HERE.md  pen-spike.html
.github/workflows/: ci.yml
design-reference/: design-system.md
design-reference/editor-redesign/: EditorPro.jsx  Inspector.jsx  README.md  editor-model.jsx  index.html  shared.jsx  tweaks-panel.jsx
design-reference/editor-redesign/styles/: dir-focus-skins.css  dir-focus.css  editor-base.css  editor-pro.css
design-reference/mockups/: 01_figma_like.html  02_illustrator_like.html  03_minimal_hybrid.html  04_dark_monochrome.html  README.md
docs/: A7_LIVE_TRANSFORM_PLAN.md  ARTBOARD_SPEC.md  BOX_SYSTEM_PLAN.md  COLOR_SPEC.md  DESIGN_BRIEF.md  DETAILED_ROADMAP.md  ELEMENTS_CATALOG.md  ENGINEERING_REVIEW.md  FILL_STROKE_NOTES.md  GPU_UI_SPIKE_BRIEF.md  ILLUSTRATOR_TOOLS_CATALOG.md  LAYERS_SPEC.md  LAYERS_VISION.md  MASKS_PLAN.md  MASTER_PLAN_V1_LAUNCH.md  PAINS_LOG.md  PAINS_WORK_ORDER.md  PAINS_WORK_ORDER_2.md  PANELS_PRO_SPEC.md  ROADMAP.md  RUST_PORT_SPIKE_NOTES.md  SAVE_EXPORT_PLAN.md  SNAP_TRANSFORM_FEATURES.md  SNAP_TRANSFORM_REFERENCE.md  SNAP_TRANSFORM_SPEC.md  UI_DIRECTION.md  UI_FIGMA_SPEC.md  UI_MASTER_PLAN.md  UI_PLAN_EN.md  UI_VISION_MOCKUP.html  VAROS_CONSTITUTION.md  VAROS_PLAN.md  VECTOR_BUILD_SPEC.md  VENDOR_PATCHES.md  VISUAL_POLISH_PLAN.md  plan.html
docs/adr/: ADR-0000-template.md  ADR-0001-native-gpu-ui-stack.md  ADR-0002-two-level-command-boundary.md  ADR-0003-v1-container.md  ADR-0004-v1-schema-policy.md  ADR-0005-crate-dependency-directions.md  ADR-0006-egui-tiles-fork-contract.md  ADR-0007-visible-update-policy.md
docs/audits/: 2026-07-11-CLAUDE-COUNTER-REVIEW.md  2026-07-11-CODEX-FULL-PROJECT-AUDIT.md
docs/foundation/: DEPENDENCY_MAP.md  F3_CHARACTERIZATION.md  F4_DESIGN.md  FOUNDATION_CHARTER.md  GATE_LOG.md  INVENTORY.md  NOTES_FOR_CHARTER.md  OWNERSHIP_MAP.md  P11_1_PERF.md  STATUS.md
docs/history/: A7_LIVE_TRANSFORM_PLAN.md  DESIGN_BRIEF.md  GPU_UI_SPIKE_BRIEF.md  PAINS_WORK_ORDER.md  PAINS_WORK_ORDER_2.md  ROADMAP.md  UI_PLAN_EN.md  VAROS_START_HERE.md  plan.html
docs/history/prototypes/: varos-pen-spike.html
docs/prototypes/: pen-spike.html  varos-pen-spike.html
docs/reference/: ARTBOARD_SPEC.md  BOX_SYSTEM_PLAN.md  ELEMENTS_CATALOG.md  ILLUSTRATOR_TOOLS_CATALOG.md  LAYERS_SPEC.md  SAVE_EXPORT_PLAN.md  SHAPES_NOTES.md  SNAP_TRANSFORM_FEATURES.md  SNAP_TRANSFORM_REFERENCE.md  SNAP_TRANSFORM_SPEC.md  UI_VISION_MOCKUP.html  VECTOR_BUILD_SPEC.md
tauri-spike/: Cargo.toml  tauri.conf.json
tauri-spike/capabilities/: default.json
tauri-spike/frontend/: index.html
tauri-spike/src/: main.rs
tools/: check_dep_directions.ps1  check_links.ps1  check_vendor_patches.ps1
varos/: Cargo.toml  THIRD_PARTY_NOTICES.md  rustfmt.toml
varos-spike/: Cargo.toml
varos-spike/src/: main.rs
varos/crates/varos-app/: Cargo.toml
varos/crates/varos-app/src/: cursors.rs  lib.rs  main.rs  panel_html.rs  single_instance.rs  ui.rs
varos/crates/varos-app/src/shell/: boxtree.rs  mod.rs  registry.rs  tokens.rs
varos/crates/varos-core/: Cargo.toml
varos/crates/varos-core/src/: boolean.rs  command.rs  editor.rs  file.rs  geom.rs  lib.rs  model.rs  scene.rs  units.rs
varos/crates/varos-core/src/tools/: convert.rs  direct.rs  eyedropper.rs  mod.rs  object.rs  pen.rs  rotate.rs  shapes.rs
varos/crates/varos-core/tests/: align.rs  boards.rs  boolean_corners.rs  colors.rs  delete_anchor.rs  edit_command.rs  golden.rs  groups.rs  guides.rs  history_lifecycle.rs  input_feel.rs  layers.rs  live_transform.rs  masks.rs  math.rs  occlusion.rs  opacity.rs  segment.rs  serde_roundtrip.rs  snap.rs  transform.rs  undo_selection.rs  vrs.rs  xform.rs
varos/crates/varos-core/tests/fixtures/: ancient_pre_artboards.vrs  legacy_groups.vrs  pre_paint_enum.vrs
varos/crates/varos-pdf/: Cargo.toml
varos/crates/varos-pdf/src/: lib.rs
varos/crates/varos-pdf/tests/: container.rs  open_fill.rs  rotated_export.rs
varos/crates/varos-render-wgpu/: Cargo.toml
varos/crates/varos-render-wgpu/examples/: perf_harness.rs
varos/crates/varos-render-wgpu/src/: lib.rs  perf.rs  tess.rs
wry-spike/: Cargo.toml
wry-spike/src/: main.rs
