[package]
name = "tauri-spike"
version = "0.1.0"
edition = "2021"

# Phase 2b de-risk spike: prove Tauri builds/runs here + IPC works, then add a wgpu canvas.
[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.dev]
debug = 0
