# Varos — clean workspace (Phase 1). The prototype lives at ../varos-spike (kept as reference).
# Hard seam: varos-core is pure Rust (no GPU/window deps); varos-render-wgpu depends on core, never the reverse.
[workspace]
resolver = "2"
members = ["crates/varos-core", "crates/varos-render-wgpu", "crates/varos-app", "crates/varos-pdf"]

[profile.dev]
debug = 0           # lighter/faster build loop (we judge feel, not step-debug)
