# Varos — clean workspace (Phase 1). The prototype lives at ../varos-spike (kept as reference).
# Hard seam: varos-core is pure Rust (no GPU/window deps); varos-render-wgpu depends on core, never the reverse.
[workspace]
resolver = "2"
members = ["crates/varos-core", "crates/varos-render-wgpu", "crates/varos-app", "crates/varos-pdf"]

[profile.dev]
debug = 0           # lighter/faster build loop (we judge feel, not step-debug)

# Local fork of egui_tiles 0.16.0 at upstream 62ac74717ebe284749a0066adf9566bbbab9ee42.
# Varos' docking, tab, preview, and glide delta spans exactly five source files and is isolated behind
# varos-app's shell/boxtree.rs. Contract, reasons, rebase procedure, and machine check:
# ../docs/VENDOR_PATCHES.md and ../tools/check_vendor_patches.ps1.
[patch.crates-io]
egui_tiles = { path = "vendor/egui_tiles" }
