[package]
name = "varos-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "varos"
path = "src/main.rs"

# The desktop shell (winit) + glue. Later: Tauri drops in here behind the same seam.
[dependencies]
varos-core = { path = "../varos-core" }
varos-render-wgpu = { path = "../varos-render-wgpu" }
winit = "0.29"
pollster = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
wry = "0.52"  # WebView2 panels in a sibling child HWND (right side) — see memory varos-ui-shell-decision
resvg = "0.45"  # render Lucide SVG cursors to bitmaps
raw-window-handle = "0.6"  # get the HWND for native cursor
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell"] }
