[package]
name = "varos-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "varos"
path = "src/main.rs"

# The desktop shell (winit) + glue. Later: Tauri drops in here behind the same seam.
[dependencies]
varos-core = { path = "../varos-core" }
varos-render-wgpu = { path = "../varos-render-wgpu" }
varos-pdf = { path = "../varos-pdf" }   # the .vrs PDF container (valid PDF + embedded model)
winit = "0.30.13"
pollster = "0.3"
image = { version = "0.25", default-features = false, features = ["png"] }
resvg = "0.45"  # render Lucide SVG cursors to bitmaps
raw-window-handle = "0.6"  # get the HWND for native cursor
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_UI_Controls", "Win32_UI_HiDpi"] }
egui = "0.35"
egui-wgpu = "0.35"
egui-winit = "0.35"
rfd = "0.15"   # native Save/Open/message dialogs (the 🔖 slice: .vrs on disk)

# ── UI-shell box-system (BOX_SYSTEM_PLAN). egui_tiles is confined to shell/boxtree.rs (ruling 9). ──
egui_tiles = "0.16"                                  # split-tree layout + drag-resize + serde (egui 0.35)
serde = { version = "1", features = ["derive"] }     # BoxState / PanelId serde — workspaces from day one
serde_json = "1"
